Fixed bug with calender on mobile screen sizes

--- a/src/components/search/searchInformationForm/searchInformationForm.css
+++ b/src/components/search/searchInformationForm/searchInformationForm.css
@@ -108,6 +108,7 @@
     margin-top: 30px;
     flex-direction: column;
     align-items: center;
+    padding-top: 50px;
   }
   .halfWidthInfoBlock {
     width: 100%;
